<resources>
    <string name="app_name">Flutrack</string>
    <string name="bottom_navigation_map">Map</string>
    <string name="bottom_navigation_dashboard">Dashboard</string>
    <string name="action_about">About</string>
    <string name="dataErrorMessage">Network Error</string>
    <string name="dataErrorRetryButtonText">Retry</string>
    <string name="totalSymptomsSubtitle">Flu Symptoms - Last 7 days</string>
    <string name="totalSymptomsTitle">Total Symptoms</string>
    <string name="mostFrequestSymptomSubtitle">Most frequent flu symptom</string>
    <string name="percentageSubtitle">Most frequent to all symptoms</string>
    <string name="percentageTitle">% Percentage</string>
    <string name="totalTweetsTitle">Total Tweets</string>
    <string name="totalTweetsSubtitle">Current total of visualized tweets</string>
    <string name="loading">Loading…</string>
    <!--suppress AndroidLintUnusedResources -->
    <string name="aboutDialogTitle">About</string>
    <!--suppress AndroidLintUnusedResources -->
    <string name="aboutDialogPositiveButton">OK</string>
    <string name="poweredBy">Powered by http://www.flutrack.org/</string>
    <string name="sourceCode">Source code https://github.com/alex199568/flutrack</string>
    <string name="contactMe">Contact me sasha.199568@gmail.com</string>
    <string name="errorDialogTitle">¯\\_(ツ)_/¯</string>
    <string name="errorDialogMessage">Oops, something went wrong</string>
    <string name="errorDialogButton">Try again</string>
</resources>
