<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/secondaryColor"
    >

    <TextView
        android:id="@+id/totalSymptomsSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:paddingLeft="16dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/totalSymptomsSubtitle"
        android:textColor="@color/secondaryColor"
        android:background="@android:color/white"
        android:fontFamily="@font/oswald_font_family"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded,RtlSymmetry"/>

    <TextView
        android:id="@+id/totalSymptomsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/oswald_font_family"
        android:text="@string/totalSymptomsTitle"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="24dp"/>

    <TextView
        android:id="@+id/totalSymptomsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/oswald_font_family"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/loading"
        app:layout_constraintBottom_toTopOf="@+id/totalSymptomsSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalSymptomsTitle"
        tools:text="1298"
        android:layout_marginRight="24dp"/>

    <ImageView
        android:id="@+id/totalSymptomsIcon"
        android:layout_width="32dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/totalSymptomsSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_male"
        tools:ignore="ContentDescription"
        android:layout_marginLeft="24dp"/>
</android.support.constraint.ConstraintLayout>